Revision history for Perl extension Coro.

TODO: should explore PerlIO::via::CoroCede and PerlIO::via::CoroAIO.
TODO: maybe implement a default message channel, very much like Erlang's
      actor model (which is cool in a lot of important aspects (failures!),
      but very lacking in others (higher level ipc)).

4.748
	- Coro::Storable forgot to wrap Storable::pstore.

4.747 Tue Sep 23 01:59:41 CEST 2008
	- fix a per-cv memleak (one empty array was leaked per
          code reference).
        - avoid a crash in coro->call|rss when the coroutine was already
          destroyed (most noticably when using Coro::Debug::ps :)
        - also protect *Storable::FILE.
        - push up default storable granularity to 20ms.

4.746 Sun Sep 21 03:22:20 CEST 2008
        - be more insistent on locking Storable against reentrancy
          in Coro::Storable.
	- move swap_def?v and throw to Coro::State, as documented.

4.745 Thu Jul 24 00:14:38 CEST 2008
	- remove debugging code related to MgPV_nolen_const, also try to
          make it compile with perl 5.8.6 (yes, apple apparently loves
          outdated software). Reported by John S.

4.744 Tue Jul  8 22:06:35 CEST 2008
      	- correctly provide default DIE/WARN handlers as documented.
	- also overwrite PL_vtbl_sigelem.svt_clear, even though current
          implementations inside perl work fine for us.

4.743 Mon Jun 16 00:21:57 CEST 2008
	- when using Coro::EV without running EV::loop it could
          result in busy-waiting for events, this has been fixed.
        - reduce codesize and improve performance by using EV_DEFAULT_UC.

4.742 Sat May 31 14:10:21 CEST 2008
	- implement a workaround for (some) perl <5.8.8 versions.
        - require EV 3.3+.

4.741 Fri May 30 23:33:09 CEST 2008
	- tell netbsd how utterly broken their imitation of an OS is
          and refuse to build by default if pthreads are in use.
        - switch to "s" method on all bsd's by default, as their ucontext